# revanced-patches

./: .gitignore  .releaserc  CHANGELOG.md  README-template.md  README.md  build.gradle.kts  crowdin.yml  gradle.properties  gradlew  main.py  missing_strings.py  package-lock.json  package.json  patches-bundle.json  patches-list.json  patches.json  remove_unused_strings.py  replace_strings.py  search_for_missing_strings.py  search_for_missing_strings.sh  settings.gradle.kts  sort_strings.py  strings (24).xml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml  suggestion.yml
.github/workflows/: build-patches.yml  build_pull_request.yml  close_stale_issues.yml  open_pull_request.yml  pull_request.yml  release.yml  (+1 more)
api/: revanced-patches.api
benchmarks/: README.md  compare.sql  func_speed.py
extensions/: proguard-rules.pro
gradle/: libs.versions.toml
patches/: build.gradle.kts
src/: missing_prefs.py  missing_strings.py  remove_unused_strings.py  replace_strings.py  sort_strings.py
xml_tools/: main.py  pyproject.toml  requirements.txt
xml_tools/config/: __init__.py  settings.py
xml_tools/core/: __init__.py  exceptions.py  logging.py  xml_logging.py
xml_tools/handlers/: __init__.py  check_icons.py  check_prefs.py  check_prefs_reverse.py  check_strings.py  create_update_from_diff.py  missing_prefs.py  missing_strings.py  remove_unused_resources.py  remove_unused_strings.py  replace_strings.py  sort_strings.py  update_from_diff.py  update_strings.py
xml_tools/utils/: __init__.py  git.py  xml.py  xml_processor.py
(+5562 files in other folders)
